Changed footer font size and added more text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       color: rgb(244, 245, 235);
       text-align: center;
       margin: 10px;
-      font-size: 20px;
+      font-size: 16px;
     }
     .dark-button {
       font-size: 12px;
@@ -132,7 +132,11 @@
         ><button>Things to do</button></a
       >
     </div>
-    <footer>Coded by Tracy Jardine</footer>
+    <footer>
+      Coded by Tracy Jardine
+      <hr />
+      HTML, CSS, & Javascript
+    </footer>
     <script>
       function changeTheme() {
         let body = document.querySelector("body");
