--- a/index.html
+++ b/index.html
@@ -4,99 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+Sinhala:wght@400;800&family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
     <title>Explore Chicago 🌎</title>
   </head>
-  <style>
-    body {
-      background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/053/431/original/chicago_day.jpg?1668361412");
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    h1,
-    h2,
-    p {
-      text-align: center;
-    }
-    p {
-      margin-top: 20px;
-    }
-    img {
-      max-width: 100%;
-    }
-    .container {
-      background: rgb(245, 223, 223, 0.7);
-      margin: 15px auto;
-      max-width: 600px;
-      padding: 30px;
-      border-radius: 15px;
-    }
-    button {
-      display: block;
-      margin: 0% auto;
-      font-size: 18px;
-      border-radius: 10px;
-      transition: all 150ms ease-in-out;
-    }
-    button:hover {
-      background: rgba(51, 68, 90, 0.877);
-      cursor: pointer;
-      color: antiquewhite;
-    }
-    footer {
-      color: rgb(244, 245, 235);
-      text-align: center;
-      margin: 10px;
-      font-size: 16px;
-    }
-    .dark-button {
-      font-size: 12px;
-      background: black;
-      color: aliceblue;
-      padding: 8px;
-      border: 1px;
-    }
-    .dark-button:hover {
-      background: white;
-      color: black;
-
-      border-color: cornflowerblue;
-    }
-    .chicago-bean-pic {
-      border-radius: 20px;
-      transition: all 150ms ease-in-out;
-    }
-    .chicago-bean-pic:hover {
-      filter: contrast(80%);
-      opacity: 0.8;
-      transform: scale(1.1);
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-gap: 12px;
-    }
-    .grid {
-      width: 100%;
-    }
-    .grid img {
-      border-radius: 15px;
-      transition: all 175ms ease-in-out;
-    }
-    .grid img:hover {
-      transform: scale(1.3);
-    }
-    .dark {
-      background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/053/433/original/chicago_night.jpg?1668362571");
-      color: aliceblue;
-    }
-    .dark .container {
-      background: rgba(47, 62, 105, 0.7);
-    }
-  </style>
   <body>
     <button class="dark-button">Change theme</button>
     <div class="container">
-      <h1>Chicago 💫</h1>
+      <h1>Chicago</h1>
       <h2>The windy city - let's explore! 🌎</h2>
       <img
         src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/908/original/chicago1.jpg?1668189224"
