Updated title and font

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+Sinhala:wght@400;800&family=Satisfy&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap"
       rel="stylesheet"
     />
-    <title>Explore Chicago 🌎</title>
+    <title>Come Visit - Chicago</title>
   </head>
   <body>
     <button class="dark-button">Change theme</button>
     <div class="container">
       <h1>Chicago</h1>
-      <h2>The windy city - let's explore! 🌎</h2>
+      <h2>The windy city</h2>
       <img
         src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/908/original/chicago1.jpg?1668189224"
         alt=""
